# fcitx-rime

./: CMakeLists.txt  Dockerfile  README.md
cmake/: FindRimeData.cmake
data/: CMakeLists.txt
gui/src/: CMakeLists.txt  Common.h  ConfigMain.cpp  RimeConfigParser.cpp
po/: CMakeLists.txt  ca.po  da.po  de.po  fcitx-ithuan.pot  ja.po  ko.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: CMakeLists.txt  fcitx-ithuan.conf.in  fcitx-rime-w.conf.in  fcitx-rime.c  ithuan.conf.in  rime-w.conf.in
